--- a/plugin/plugin.vcxproj
+++ b/plugin/plugin.vcxproj
@@ -147,6 +147,7 @@
       <ModuleDefinitionFile>plugin.def</ModuleDefinitionFile>
       <AdditionalDependencies>Shlwapi.lib;kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
     </Link>
     <MASM />
     <MASM>
